Changed code - errors